added flat new york data

--- a/CommentBox/compare.html
+++ b/CommentBox/compare.html
@@ -392,6 +392,7 @@
 
 </html>
 
+<script src="login.js"></script>
 <script src="overview.js"></script>
 <script src="proposal_view.js"></script>
 <script src="agg_view.js"></script>
